fixed screen text on smaller screen

--- a/src/Components/HomePage/ServiceShowCase/style.css
+++ b/src/Components/HomePage/ServiceShowCase/style.css
@@ -21,6 +21,11 @@
    
     width: 50%;
 }
+.showCaseServiceLeft h1{
+ 
+    word-break: break-all;
+    margin: 0;
+}
 .showCaseServiceImages{
 
     width: 40%;
